# ski-analyzer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  code_review.md  docker-compose.gpu.yml  docker-compose.yml  findings.md  progress.md  task_plan.md
.agents/: README.md
.agents/plugins/: marketplace.json
.agents/skills/ski-agent-design/: SKILL.md
.agents/skills/ski-agent-evals/: SKILL.md
.agents/skills/ski-backend-change/: SKILL.md
.agents/skills/ski-frontend-change/: SKILL.md
.codex/agents/: browser-debugger.toml  coaching-reviewer.toml  docs-researcher.toml  pipeline-mapper.toml
.github/workflows/: ci.yml
backend/: AGENTS.override.md  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/models/: face_mesh.py  smpl.py
backend/app/schemas/: analysis.py  upload.py
backend/app/scripts/: download_models.py
backend/app/services/: analysis_pipeline.py  angle_calculator.py  coaching_generator.py  ideal_comparator.py  overlay_renderer.py  pose_estimator.py  report_generator.py  video_processor.py
backend/tests/: test_coaching_generator.py  test_download_models.py  test_integration.py  test_pipeline.py  test_report_generator.py  test_runtime_contracts.py  test_services.py
docs/: api-spec.md  app-agent-architecture.md  codex-agent-ops.md  user-test-roadmap.md
frontend/: AGENTS.override.md  jest.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
infrastructure/: Dockerfile.gpu  nginx.conf
(+30 files in other folders)
