[project]
name = "ski-analyzer-backend"
version = "0.1.0"
description = "スキーシミュレータ動画解析 バックエンドAPI"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
